# python-opencv-101

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/notebooks/: opencv_basics.ipynb
src/opencv_toolkit/: __init__.py  core.py  draw.py  read.py
src/python_opencv_101/: __init__.py  core.py
tests/: test_core.py
